<resources>
    <string name="app_name">AuthTry2</string>
    <string name="login">login</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="forget_password">forget_password</string>
    <string name="register">register</string>
    <string name="signup">signup</string>
    <string name="name">name</string>
    <string name="register_or_signup">register_or_signup</string>
    <string name="go_to_login">go to login</string>
    <string name="lbl_forgot_password">lbl_forgot_password</string>
    <string name="forgot_password_msg">forgot_password_msg</string>
    <string name="hint_email">hint_email</string>
    <string name="button">Button</string>
    <string name="reset">reset</string>
    <string name="reset_password">RESET PASSWORD</string>
    <string name="resetemail">resetemail</string>
    <string name="verify">verify</string>
    <string name="get_otp">Get OTP</string>
    <string name="verify_otp">Verify OTP</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="enter_your_phone">Enter your phone</string>
    <string name="verification">VERIFICATION</string>
    <string name="Name">Name</string>
    <string name="Editphoto">EditPhoto</string>
    <string name="SIGN_OUT">SIGN OUT</string>
    <string name="ENTER_YOUR_NAME">ENTER YOUR NAME</string>
    <string name="enter_your_name">Enter Your Name</string>
    <string name="save_image">save image</string>

</resources>